tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__ChargeBuffer-AAAAAAAAAAAAAAAAAAAHyQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1993,
  "optional_prerequisites": [
    1992
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "A Charge Buffer augmentation to your wand allows it to hold 25 percent more vis.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Charge Buffer",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
