tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__CheckYourWarpFor-TBMfXgORRHuggrozS7vsVA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 257061950079102036,
  "prerequisites": [
    297
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Don't want to spend your Salis Mundus on Litmus Paper anymore? This device can significantly reduce your Litmus Paper usage!\n\nWhile holding this item, you gain a HUD Icon on the top left of your screen, which tells you how much warp you have. It does not tell you the exact warp values, but it helps you estimate it.\n\nHere's how to read it:\nYour §5§lPermanent Warp§r is displayed as a dark purple bar\nYour §5Normal Warp§r is displayed as a light purple bar\nYour §dTemporary Warp§r is displayed as a pink bar\n\nThe bar is full at 100 total warp.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Check Your Warp For Free!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    297
  ],
  "rewards": [],
  "tasks": []
}
